[package]
name = "rustychain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = "4.5.4"
failure = "0.1.8"
log = "0.4.21"
rand = "0.8.5"
rust-crypto = "0.2.36"
secp256k1 = "0.29.0"
serde = {version = "1.0.198", features = ["derive"]}
sha2 = "0.10.8"
sled = "0.34.7"

[[test]]
name = "block_test"
path = "src/block.rs"

[[test]]
name = "test_blockchain"
path = "src/blockchain.rs"
